--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.3.1",
+    "@react-native-firebase/firestore": "^23.3.1",
+    "@react-native-firebase/messaging": "^23.3.1",
     "@react-native-picker/picker": "^2.11.1",
     "@react-native/new-app-screen": "0.81.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
@@ -19,10 +23,12 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
     "moment": "^2.30.1",
+    "qs": "^6.14.0",
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-check-version": "^1.4.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
